--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <div class="item_f">
                 <h5>:)</h5>
                 <div class="centrador">
-                    <button id="playButton">Reproducir Audio</button>
+                    <button id="playButton">Reproducir sonido</button>
                     <audio id="audio" src="cosa/sonido.mp3"></audio>
                 </div>
             </div>
